chore: complete assertions